--- a/part2/phonebook/src/App.module.css
+++ b/part2/phonebook/src/App.module.css
@@ -18,3 +18,20 @@
   cursor: pointer;
   border-radius: 10px;
 }
+
+.error,
+.success {
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+.error {
+  color: red;
+}
+
+.success {
+  color: green;
+}
